--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
       <div class="container features-container">
         <h2 class="visually-hidden">features</h2>
         <ul class="features-list list">
-
           <li class="features-content">
+            <div class="svg-icon-content">
+              <svg class="" width="64" height="64">
+                <use href="/images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="features-item">Strategy</h3>
             <p class="features-text">Our goal is to identify the business
               problem to walk away with the perfect and creative solution.</p>
@@ -61,6 +65,11 @@
 
 
           <li class="features-content">
+            <div class="svg-icon-content">
+              <svg class="svg-icon" width="64" height="64">
+                <use href="/images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="features-item">Punctuality</h3>
             <p class="features-text">Bring the key message to the brand's audience for the best price within the
               shortest
@@ -68,12 +77,22 @@
           </li>
 
           <li class="features-content">
+            <div class="svg-icon-content">
+              <svg class="svg-icon" width="64" height="64">
+                <use href="/images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="features-item">Diligence</h3>
             <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk. </p>
           </li>
 
           <li class="features-content">
+            <div class="svg-icon-content">
+              <svg class="svg-icon" width="64" height="64">
+                <use href="/images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="features-item">Technologies</h3>
             <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.</p>
@@ -103,6 +122,36 @@
             <div class="team-info-text">
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-text">Product Designer</p>
+              <ul class="social-list list">
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
 
@@ -111,6 +160,36 @@
             <div class="team-info-text">
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-text">Frontend Developer</p>
+              <ul class="social-list list">
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
 
@@ -119,6 +198,36 @@
             <div class="team-info-text">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
+              <ul class="social-list list">
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
 
@@ -127,7 +236,95 @@
             <div class="team-info-text">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
+              <ul class="social-list list">
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icon-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- CUSTOMERS -->
+
+    <section class="customers">
+      <div class="container">
+        <h2 class="customers-title">Customers</h2>
+        <ul class="customers-list list">
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-one"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-two"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-three"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-four"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-five"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link link">
+              <svg class="customers-icon" width="168" height="88">
+                <use href="/images/icons.svg#icon-logo-six"></use>
+              </svg>
+            </a>
+
           </li>
         </ul>
       </div>
@@ -136,10 +333,46 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="container">
-      <a class="footer-logo-web link" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
+    <div class="footer-container container">
+      <div class="footer-webstudio-content">
+        <a class="footer-logo-web link" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+          growth
+          solutions.</p>
+      </div>
+      <div class="footer-social-container">
+        <p class="footer-social-title">Social</p>
+        <ul class="footer-social-list list">
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
