--- a/portfolio.html
+++ b/portfolio.html
@@ -143,10 +143,46 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="container">
-      <a class="footer-logo-web link" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
+    <div class="footer-container container">
+      <div class="footer-webstudio-content">
+        <a class="footer-logo-web link" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+          growth
+          solutions.</p>
+      </div>
+      <div class="footer-social-container">
+        <p class="footer-social-title">Social</p>
+        <ul class="footer-social-list list">
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
