--- a/index.html
+++ b/index.html
@@ -202,28 +202,28 @@
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -240,28 +240,28 @@
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -281,7 +281,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-one"></use>
+                <use href="./images/icons.svg#icon-logo-one"></use>
               </svg>
             </a>
 
@@ -289,7 +289,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-two"></use>
+                <use href="./images/icons.svg#icon-logo-two"></use>
               </svg>
             </a>
 
@@ -297,7 +297,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-three"></use>
+                <use href="./images/icons.svg#icon-logo-three"></use>
               </svg>
             </a>
 
@@ -305,7 +305,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-four"></use>
+                <use href="./images/icons.svg#icon-logo-four"></use>
               </svg>
             </a>
 
@@ -313,7 +313,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-five"></use>
+                <use href="./images/icons.svg#icon-logo-five"></use>
               </svg>
             </a>
 
@@ -321,7 +321,7 @@
           <li class="customers-item">
             <a href="" class="customers-link link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/icons.svg#icon-logo-six"></use>
+                <use href="./images/icons.svg#icon-logo-six"></use>
               </svg>
             </a>
 
@@ -346,28 +346,28 @@
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
               <svg class="footer-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
               <svg class="footer-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
               <svg class="footer-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
               <svg class="footer-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
