--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li class="features-content">
             <div class="svg-icon-content">
               <svg class="" width="64" height="64">
-                <use href="/images/icons.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3 class="features-item">Strategy</h3>
@@ -67,7 +67,7 @@
           <li class="features-content">
             <div class="svg-icon-content">
               <svg class="svg-icon" width="64" height="64">
-                <use href="/images/icons.svg#icon-clock"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="features-item">Punctuality</h3>
@@ -79,7 +79,7 @@
           <li class="features-content">
             <div class="svg-icon-content">
               <svg class="svg-icon" width="64" height="64">
-                <use href="/images/icons.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3 class="features-item">Diligence</h3>
@@ -90,7 +90,7 @@
           <li class="features-content">
             <div class="svg-icon-content">
               <svg class="svg-icon" width="64" height="64">
-                <use href="/images/icons.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="features-item">Technologies</h3>
@@ -126,21 +126,21 @@
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -164,28 +164,28 @@
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
