--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
           solutions.</p>
       </div>
       <div class="footer-social-container">
-        <p class="footer-social-title">Social</p>
+        <p class="footer-social-title">Social media</p>
         <ul class="footer-social-list list">
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
