--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <li class="social-icon-item">
                   <a href="" class="social-link link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -341,7 +341,7 @@
           solutions.</p>
       </div>
       <div class="footer-social-container">
-        <p class="footer-social-title">Social</p>
+        <p class="footer-social-title">Social media</p>
         <ul class="footer-social-list list">
           <li class="footer-social-item">
             <a href="" class="footer-social-link">
