--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         <ul class="portf-card-list list">
           <li class="portf-card-item">
 
-            <a href="./portfolio.html" class="link">
+            <a href="./portfolio.html" class="portf-card-link link">
               <img src="./images/banking.jpg" alt="banking" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Banking App Interface Concept</h2>
@@ -64,7 +64,7 @@
 
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/cash.jpg" alt="cash" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/cash.jpg" alt="cash" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Cashless Payment</h2>
                 <p class="portf-card-text">Marketing</p>
@@ -74,7 +74,7 @@
 
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/meditation.jpg" alt="meditation" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/meditation.jpg" alt="meditation" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Meditation App</h2>
                 <p class="portf-card-text">App</p>
@@ -83,7 +83,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/taxi.jpg" alt="taxi" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/taxi.jpg" alt="taxi" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Taxi Service</h2>
                 <p class="portf-card-text">Marketing</p>
@@ -92,7 +92,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/screen.jpg" alt="screen" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/screen.jpg" alt="screen" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Screen Illustrations</h2>
                 <p class="portf-card-text">Design</p>
@@ -101,7 +101,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/courses.jpg" alt="courses" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/courses.jpg" alt="courses" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Online Courses</h2>
                 <p class="portf-card-text">Marketing</p>
@@ -110,7 +110,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/inst.jpg" alt="inst" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/inst.jpg" alt="inst" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Instagram Stories Concept</h2>
                 <p class="portf-card-text">Design</p>
@@ -119,7 +119,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/food.jpg" alt="food" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/food.jpg" alt="food" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Organic Food</h2>
                 <p class="portf-card-text">Web Site</p>
@@ -128,7 +128,7 @@
           </li>
 
           <li class="portf-card-item">
-            <a href="" class="link"><img src="./images/coffee.jpg" alt="coffee" width="360">
+            <a href="" class="portf-card-link link"><img src="./images/coffee.jpg" alt="coffee" width="360">
               <div class="card-text-info">
                 <h2 class="portf-card-name">Fresh Coffee</h2>
                 <p class="portf-card-text">Web Site</p>
